sbt fix